--- a/src/Screens/Home/home.css
+++ b/src/Screens/Home/home.css
@@ -1,40 +1,121 @@
-.home
-{
+/* Main container */
+.home {
     background-color: var(--backgroud-color);
     display: flex;
-    
 }
 
-  
-.left_navbar
-{
-background-color: #fff;
-width: 20%;
-height: 100vh;
+.left_navbar {
+    padding: 1%;
+    background-color: var(--background-frame);
+    width: 17%;
+    height: 100vh;
 }
-.logo_name
-{
+
+.logo_name {
+    display: flex;
+    width: 100%;
+    height: 10%;
+    justify-content: space-around;
+    color: var(--font-color);
+    align-items: center;
+}
+
+.logo {
+    width: 25%;
+    height: 100%;
+}
+
+.pages {
+    height: 65%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.icons {
+    width: 8%;
+    height: 80%;
+    text-align: center;
+    color: white;
+    transition: color 0.3s ease; 
+}
+
+.pages_elements {
+    width: 100%;
+    height: 10%;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20px;
+    cursor: pointer; 
+    transition: background-color 0.3s ease, box-shadow 0.3s ease; 
 }
 
-.main
-{
-
+.page_text {
+    color: var(--font-color);
+    width: 50%;
+    height: 80%;
+    margin-left: 5%;
+    display: flex;
+    align-items: center;
+    font-weight: 300;
+    font-size: 20px;
+    transition: color 0.3s ease; 
 }
 
-.right_calender
-{
+.pages_elements.active {
+    background-color: var(--highlight-color); 
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); 
+    border-radius: 8px; 
 }
 
-.pages
-{
-
+.pages_elements.active .icons {
+    color: var(--highlight-icon-color);
 }
 
-.pages_elements
-{
+.pages_elements.active .page_text {
+    color: var(--active-font-color); 
+}
+.help_logout {
+    display: flex;
+    flex-direction: column;
+    align-items:flex-start ;
+    justify-content: center;
+    gap: 15%;
+    height: 25%;
+    /* background-color: red;  */
+    color: var(--font-color);
+}
 
+.help_element, .logout_element , .help_element>h3, .logout_element>h3 {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    cursor: pointer;
+    transition: color 0.3s ease; 
+    font-weight: 300;
+    margin-left: 1%;
+  }
+  
+  .help_element:hover, .logout_element:hover {
+    color: var(--highlight-color);
+  }
+  
+  .help_icon, .logout_icon {
+    margin-right: 8px; 
+    color: var(--font-color);
+    transition: color 0.3s ease; 
+  }
+  
+  .help_element:hover .help_icon, 
+  .logout_element:hover .logout_icon {
+    color: var(--font-color); 
+  }
+  
+.main {
+    flex-grow: 1;
+}
+
+.right_calendar {
+    width: 20%;
 }
